--- a/src/components/navbar/nav.css
+++ b/src/components/navbar/nav.css
@@ -41,13 +41,21 @@
 a{
     cursor: pointer;
 }
-.dropdown:hover{
-  border-bottom-color: rgb(0, 0, 0);
-  border-bottom-style: solid;
-  border-bottom-width: 3px;
-  transition: 0.1s;
+.nav-item .profile-icon {
+  display: flex;
+  align-items: center;
+  padding-top: 5px; /* Adjust as needed */
+  padding-bottom: 5px; /* Adjust as needed */
+  transform: scale(1.3);
+  transition: .3s;
+
 }
-.dropdown{
-  transform: scale(1.4);
- transition: 0.2s;
+.nav-item .profile-icon:hover {
+  transform: scale(1.5);
+  transition: .3s;
 }
+.navbar-nav .nav-item {
+  display: flex;
+  align-items: center;
+}
+
